added partner and comapny logos

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -563,6 +563,27 @@ html#home-html {
       text-align: center;
     }
   }
+  .partners-logos {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    a {
+      display: block;
+      text-align: center;
+      img {
+        margin: 0 auto;
+      }
+    }
+  }
+  .company-logos {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
   .partners-con {
     display: flex;
     align-items: center;
