--- a/layouts/partials/side-menu.html
+++ b/layouts/partials/side-menu.html
@@ -1,5 +1,37 @@
 <ul class="sub-menu list-unstyled">
   {{ $currentNode := . }}
+
+  {{ range .Site.Menus.main }}
+  {{ if eq .Identifier "documentation" }}
+  {{ if .HasChildren }}
+  <ul class="list-unstyled">
+  {{ range .Children }}
+    <li>
+      <div class="panel panel-default">
+        <div class="panel-heading">{{ title .Name }}</div>
+        <div class="panel-body">
+          {{ if .HasChildren }}
+          <ul class="list-unstyled">
+            {{ range .Children }}
+            <li{{if $currentNode.IsMenuCurrent "main" . }} class="active"{{end}}><a href="{{ .URL }}">{{ .Name }}</a></li>
+            {{ end }}
+          </ul>
+          {{ end }}
+        </div>
+      </div>
+    </li>
+  {{ end }}
+  </ul>
+  {{end }}
+  {{end }}
+  {{end }}
+</ul>
+
+
+
+
+<ul class="sub-menu list-unstyled">
+  {{ $currentNode := . }}
   {{ range .Site.Menus.documentation }}
 
 	<li class="main-menu-item{{if or ($currentNode.IsMenuCurrent "documentation" .) ($currentNode.HasMenuCurrent "documentation" .) }} active{{end}}">
