Adjusted some of the pages for centent and some more navigational changes

--- a/layouts/partials/side-menu-downloads.html
+++ b/layouts/partials/side-menu-downloads.html
@@ -23,7 +23,7 @@
               </ul>
               {{ else }}
               <ul class="list-unstyled">
-                <li><a target="_blank" href="https://github.com/nats-io/nats-site#adding-documentation">Add your client!</a></li>
+                <li><a href="mailto:info@nats.io?subject=NATS External Client">Contact us</a> to add your client!</a></li>
               </ul>
               {{ end }}
             </li>
