--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,7 +45,7 @@
             {{ $currentNode := . }}
             {{ range .Site.Menus.main }}
             {{ if .HasChildren }}
-            <li class="hidden-md hidden-lg dropdown{{if $currentNode.HasMenuCurrent " main " . }} active{{end}}">
+            <!-- <li class="hidden-md hidden-lg dropdown{{if $currentNode.HasMenuCurrent " main " . }} active{{end}}">
               <a href="{{.URL}}" class="main-item dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ .Pre }}{{ .Name }} <span class="caret"></span></a>
               <ul class="dropdown-menu">
               {{ range .Children }}
@@ -67,8 +67,8 @@
                 <li role="separator" class="divider"></li>
               {{ end }}
               </ul>
-            <li>
-            <li class="hidden-xs hidden-sm dropdown{{if $currentNode.HasMenuCurrent " main " . }} active{{end}}">
+            <li> -->
+            <li class="dropdown{{if $currentNode.HasMenuCurrent " main " . }} active{{end}}">
               <a class="main-item" href="{{.URL}}">{{ .Pre }}<span>{{ .Name }}</span></a>
             </li>
             {{else}}
