removed headings on download tables

--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -18,7 +18,7 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th class="col-md-2">Connector</th>
+              <th class="col-md-2"></th>
               <th class="col-md-7">Description</th>
               <th class="col-md-2">Developer</th>
               <th class="col-md-1">Support</th>
@@ -84,7 +84,7 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th class="col-md-2">Project or Company</th>
+              <th class="col-md-2"></th>
               <th class="col-md-10">Description</th>
             </tr>
           </thead>
