Updated php community lib and added a new nats connector

--- a/layouts/download/single.html
+++ b/layouts/download/single.html
@@ -74,6 +74,12 @@
               <td><a target="_blank" href="https://github.com/efmr">Edgar Ribeiro</a></td>
               <td>Community</td>
             </tr>
+            <tr>
+              <td><a href="https://github.com/Logimethods/nats-connector-gatling" target="_blank">A Gatling to NATS Connector</a></td>
+              <td>The NATS Gatling library provides a Gatling (an open-source load testing framework based on Scala, Akka and Netty) to NATS messaging system (a highly performant cloud native messaging system) Connector.</td>
+              <td><a target="_blank" href="https://github.com/laugimethods">Laurent Magnin</a></td>
+              <td>Community</td>
+            </tr>
           </tbody>
         </table>
       </div>
